Switch back to using exec:java to launch the application